# mastermind

./: CMakeLists.txt  Makefile  main.c  test_mastermind.c
mastermind/: CMakeLists.txt  Makefile  mastermind.h  mastermind_repersentation.h
mastermind/impl/: heuristics_data.c  heuristics_data.h  mastermind.c  mastermind.h  mastermind_representation.c
